flux/apps/base/network-policies/longhorn-system/allow-internal.yaml
---
# Allow all traffic between pods within longhorn-system (manager, instance-managers, engine, replicas)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: longhorn-system
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: longhorn-system
